--- a/app/build.gradle
+++ b/app/build.gradle
@@ -236,7 +236,7 @@ dependencies {
     compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.7.5'
     compile 'com.cylan.ext:annotations:0.1.0'
     compile 'com.mcxiaoke.gradle:packer-helper:1.0.8'
-    annotationProcessor 'com.cylan.ext:processor:0.1.0'
+//    annotationProcessor 'com.cylan.ext:processor:0.1.0'
     debugCompile 'com.cylan.ext:optdebug:0.0.1'
     releaseCompile 'com.cylan.ext:optdebug:0.0.1'
 //    releaseCompile 'com.cylan.ext:optrelease:0.0.1'
