--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -305,12 +305,7 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/CamActivityTheme"
-            android:windowSoftInputMode="adjustPan|stateHidden">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        </activity>
+            android:windowSoftInputMode="adjustPan|stateHidden"/>
 
         <meta-data
             android:name="io.fabric.ApiKey"
@@ -387,8 +382,7 @@
         </receiver>
 
         <activity android:name=".n.view.panorama.PanoramaAlbumActivity" />
-        <service android:name=".n.engine.DataSourceService" >
-        </service>
+        <service android:name=".n.engine.DataSourceService"></service>
     </application>
 
 </manifest>
